# datalair

./: .gitignore  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: docs.yml
datalair/: __init__.py  _dataset.py  _download.py  _lair.py  _uuid.py  lair.py  store.py
docs/: get_started.md  index.md
docs/api/: dataset.md  download.md  lair.md  uuid.md
docs/examples/: rna-from-geo.md
tests/: test_dataset.py  test_download.py  test_lair.py  test_store.py  test_uuid.py
