[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datalair"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lukas Jonathan Haeuser", email = "lhaeuser@ethz.ch" },
]
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "anndata>=0.11.4,<0.13",
    "psutil>=7.0.0,<8.0.0",
    "requests>=2.32.3,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "dill>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "types-psutil (>=7.0.0.20251001,<8.0.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
]
